re PR c/9928 (ICE on duplicate enum declaration)

PR c/9928
	* c-decl.c (duplicate_decls): Discard the initializer of the new decl
	only if it is a VAR_DECL.

From-SVN: r64235